# obs-nyan-real-3dof

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.en.md  README.md  THIRD_PARTY_LICENSES  build.ps1  install.ps1  package.ps1  setup.ps1
.github/workflows/: release.yml
data/: devices-example.json  nyan-real-3dof.effect  remote.html
data/locale/: en-US.ini  ja-JP.ini
docs/: architecture.md
installer/: obs-nyan-real-3dof.iss
src/: audio-wall-source.cpp  audio-wall-source.h  cursor_fence.cpp  cursor_fence.h  device_manager.cpp  device_manager.h  device_registry.cpp  device_registry.h  device_settings_obs.cpp  device_settings_obs.h  display-wall-source.cpp  display-wall-source.h  dock.cpp  dock.h  head_tracker.h  hid_io.cpp  hid_io.h  marker_tracker.cpp  marker_tracker.h  math_util.h  nyan_types.h  plugin-main.cpp  remote_control.cpp  remote_control.h  remote_schema.cpp  remote_schema.h  spatial_audio_filter.cpp  spatial_audio_filter.h  spatial_pan.h  tooltip_util.h  virtual_source.cpp  virtual_source.h  ws_audio_server.cpp  ws_audio_server.h  ws_server.cpp  ws_server.h
src/app/obs/: dock_host_obs.cpp  dock_host_obs.h  plugin-main.cpp
src/core/: LICENSE  device_manager.cpp  device_manager.h  device_registry.cpp  device_registry.h  glasses_display.cpp  glasses_display.h  head_tracker.h  hid_io.cpp  hid_io.h  math_util.h  monitor_enum.cpp  monitor_enum.h  nyan_host.cpp  nyan_host.h  nyan_json.cpp  nyan_json.h  nyan_log.cpp  nyan_log.h  nyan_paths.cpp  nyan_paths.h  nyan_time.h  nyan_types.h  remote_control.cpp  remote_control.h  remote_schema.cpp  remote_schema.h  tooltip_util.h  transports.h  wall_layout.cpp  wall_layout.h  ws_server.cpp  ws_server.h
src/core/transports/: moverio.cpp  nreal_light.cpp  rayneo.cpp  rokid.cpp  viture.cpp  xreal_air.cpp  xreal_air.h  xreal_tcp.cpp
src/platform/obs/: audio-wall-source.cpp  audio-wall-source.h  display-wall-source.h  spatial_audio_filter.cpp  virtual_source.cpp
src/platform/win/: cursor_fence.cpp  cursor_fence.h
src/transports/: moverio.cpp  nreal_light.cpp  rayneo.cpp  rokid.cpp  transports.h  viture.cpp  xreal_air.cpp  xreal_air.h  xreal_tcp.cpp
src/ui/: dock.cpp  dock.h
tools/chrome-extension/: README.md  background.js  content.js  manifest.json  options.html  options.js  worklet.js
tools/chrome-extension/_locales/en/: messages.json
tools/chrome-extension/_locales/ja/: messages.json
